--- a/style/general.css
+++ b/style/general.css
@@ -15,14 +15,20 @@
 }
 
 body {
-  height: 100vh;
-  width: 100%;
   display: grid;
   grid-template-columns: 1fr 25%;
   gap: 1rem;
-  background: radial-gradient(circle at 100% 100%, var(--highlight-color)5% 10%, var(--primary-color) 90% 100%), radial-gradient(circle at 0% 0%,var(--highlight-color)0% 5%, var(--primary-color) 60% 100%);
   transition: all .3s ease;
   padding-left: 4rem;
+}
+
+.bg{
+  position: fixed;
+  inset: 0;
+  z-index: -1;
+  height: 100vh;
+  width: 100%;
+  background: radial-gradient(circle at 100% 100%, var(--highlight-color)5% 10%, var(--primary-color) 90% 100%), radial-gradient(circle at 0% 0%,var(--highlight-color)0% 5%, var(--primary-color) 60% 100%);
 }
 
 svg {
